Pushed design for container and scrollbar fix

--- a/style.css
+++ b/style.css
@@ -6,13 +6,17 @@ Date Created: 23/02/2022
 
 /* Selectors */
 :root{
---green: #42bd6e;
+--green: #39a75f;
+--spotify: #32cd51/* #369c5b */;
 --default: #efefef;
 --dullblack:#272727;
 --black: #121212;
+--test: rgb(136, 115, 90);
 
 --opensans: 'Open Sans', sans-serif;
 --poppins: 'Poppins', sans-serif;
+--noto: 'Noto Sans', sans-serif;
+--dongle: 'Dongle', sans-serif;
 }
 
 /* Main */
@@ -20,6 +24,11 @@ Date Created: 23/02/2022
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  animation: 1.25s ease onload;
+}
+
+.inverted-img{
+  transform: scaleX(-1);
 }
 
 /* Body Starts Here */
@@ -28,6 +37,10 @@ body{
   color: var(--green);
   font-size: 16px;
   font-family: var(--poppins);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 /* Navigator Bar */
@@ -44,6 +57,7 @@ body{
   min-height: 4.5rem;
   font-family:  var(--opensans);
   z-index: 1;
+  overflow: hidden;
 }
 
 .nav-bar .nav-title{
@@ -85,7 +99,7 @@ body{
   color: var(--green);
   font-size: 1.1rem;
   padding: .6rem;
-  transition: all 1.2s ease;
+  transition: all 1.5s ease-out;
 }
 
 #seperator{
@@ -94,37 +108,87 @@ body{
   user-select:  none;
 }
 
+/* Container Section CSS */
+
 .container{
   color: var(--green);
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 4rem;
+  width: 100%;
 }
 
-.container .home-title{
+.container .page-title{
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   cursor: default;
   user-select: none;
+  color: var(--spotify);
   margin-top: 10rem;
 }
 
-.container .home-title h2{
+.container .page-title h2{
   font-size: 10.5rem;
+  font-family: var(--opensans);
 }
 
-.container .home-title p{
-  font-size: 1.5rem;
+.container .page-title p{
+  font-size: 2.25rem;
+  margin: -0.5rem 0 5rem;
+  font-family: var(--dongle);
 }
 
-.container .home-title p .hoverhumor{
-  visibility: hidden;
-  opacity: 0%;
-  transition: 1s all ease;
+.container .page-info{
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+}
+
+.container .page-info .info-wrapper{
+  margin: 1.75rem 0;
+  border: 1px solid var(--spotify);
+  border-radius: 2rem;
+  padding: 2rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
+  max-width: 75%;
+}
+
+.container .page-info .info-wrapper img{
+  width: 12rem;
+  margin: 0 5rem;
+}
+
+.container .page-info .info-wrapper p{
+  font-size: 1.55rem;
+  font-family: var(--opensans);
+  text-align: justify;
+  color: var(--green);
+  opacity: 80%;
+}
+
+
+/* Project Section CSS */
+
+.project{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+}
+
+#project-title{
+  font-size: 5.25rem;
+  color: var(--spotify);
 }
 
 
@@ -139,7 +203,33 @@ body{
   color: var(--default);
 }
 
-.container .home-title p:hover > .hoverhumor{
-  visibility: visible;
-  opacity: 100%;
+
+/* keyframe animations */
+
+@keyframes onload{
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+
+/* scrollbar css */
+::-webkit-scrollbar-track{
+	box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: var(--dullblack);
+}
+
+::-webkit-scrollbar{
+	width: 12px;
+	background-color: var(--dullblack);
+}
+
+::-webkit-scrollbar-thumb{
+	border-radius: 10px;
+	box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: var(--green);  
 }
